--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,25 @@
 @charset "utf-8";
+/*共通設定*/
 *{
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 	font-family: "Noto Sans JP", "Sans-serif";
+	font-size: 16px;
 	font-weight: 300;
 }
 body{
 	width: 100vw;
+}
+img{
+	display: block;
+}
+
+/*HEADER, MV*/
+header img{
+	width: 170px;
+	margin: 0 auto;
+}
+.mv-area img{
+	width: 100%;
 }
