--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/*共通設定*/
+/* ----- 共通設定 ----- */
 *{
 	box-sizing: border-box;
 	padding: 0;
@@ -16,11 +16,38 @@ img{
 	display: block;
 }
 
-/*HEADER, MV*/
+/* ----- HEADER, MV ----- */
 header img{
 	width: 170px;
 	margin: 0 auto;
 }
 .mv-area img{
 	width: 100%;
+}
+
+/* ----- SECTION 共通 ----- */
+section{
+	width: 100%;
+	padding: 40px 0;
+}
+section:nth-of-type(1){
+	background-color: #dec200;
+}
+section:nth-of-type(2){
+	background-color: #3eb6bd;
+}
+section:nth-of-type(3){
+	background-color: #3d5a6d;
+}
+.section-inner{
+	width: 70%;
+	margin: 0 auto;
+}
+
+h2{
+	color: #fff;
+	font-size: 20px;
+	font-weight: bold;
+	border-bottom: 3px solid #fff;
+	margin-bottom: 30px;
 }
