--- a/css/style.css
+++ b/css/style.css
@@ -45,13 +45,20 @@ section:nth-of-type(3){
 }
 
 h2{
+	margin-bottom: 30px;
+	border-bottom: 3px solid #fff;
 	color: #fff;
 	font-size: 20px;
 	font-weight: bold;
 	border-bottom: 3px solid #fff;
-	margin-bottom: 30px;
 }
 p{
 	margin-bottom: 40px;
+	color: #fff;
+}
+
+/* ----- LIST ----- */
+ol li{
+	margin-bottom: 20px;
 	color: #fff;
 }
