--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* ----- 共通設定 ----- */
-*{
+* {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
@@ -9,42 +9,42 @@
 	font-weight: 300;
 	line-height: 1.5;
 }
-body{
+body {
 	width: 100vw;
 }
-img{
+img {
 	display: block;
 }
 
 /* ----- HEADER, MV ----- */
-header img{
+header img {
 	width: 170px;
 	margin: 0 auto;
 }
-.mv-area img{
+.mv-area img {
 	width: 100%;
 }
 
 /* ----- SECTION 共通 ----- */
-section{
+section {
 	width: 100%;
 	padding: 40px 0;
 }
-section:nth-of-type(1){
+section:nth-of-type(1) {
 	background-color: #dec200;
 }
-section:nth-of-type(2){
+section:nth-of-type(2) {
 	background-color: #3eb6bd;
 }
-section:nth-of-type(3){
+section:nth-of-type(3) {
 	background-color: #3d5a6d;
 }
-.section-inner{
+.section-inner {
 	width: 70%;
 	margin: 0 auto;
 }
 
-h2{
+h2 {
 	margin-bottom: 30px;
 	border-bottom: 3px solid #fff;
 	color: #fff;
@@ -52,27 +52,30 @@ h2{
 	font-weight: bold;
 	border-bottom: 3px solid #fff;
 }
-p{
+p {
 	margin-bottom: 40px;
 	color: #fff;
 }
 
 /* ----- LIST ----- */
-ol li{
+ol li {
 	margin-bottom: 20px;
 	color: #fff;
 }
 
 /* ----- TABLE ----- */
-table{
+table {
 	width: 80%;
 	margin: 0 auto;
 	border-spacing: 0;
 	border-collapse: collapse;
 	background: #fff;
 }
-th, td{
+th, td {
 	padding: 1em;
 	border: 1px solid #3d5a6d;
-	color: #fff;
+	color: #3d5a6d;
+}
+th {
+	background: #bfe1f6;
 }
