--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,19 @@ th, td {
 th {
 	background: #bfe1f6;
 }
+
+/* ----- FORM ----- */
+form {
+	width: 80%;
+	margin: 0 auto;
+}
+form dt {
+	margin-bottom: 20px;
+}
+form dt, label {
+	color: #fff;
+}
+form dt:before {
+	content: "◆";
+	margin-right: 10px;
+}
