--- a/css/style.css
+++ b/css/style.css
@@ -99,3 +99,14 @@ form dd {
 	margin-bottom: 40px;
 	margin-left: 0;
 }
+input {
+	width: 100%;
+	padding: .5em;
+	border: none;
+	font-size: 1.1em;
+}
+input[type="radio"] {
+	width: 1em;
+	margin-left: 24px;
+	margin-right: 4px;
+}
